--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         />
       </div>
       <div class="controls__btn">
-        <button id="jsMade">Fill</button>
+        <button id="jsMode">Fill</button>
         <button id="jsSave">Save</button>
       </div>
       <div id="jsColors" class="controls__colors">
